--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "express": "3.x",
     "express3-handlebars": "*",
     "mongodb": "*",
-    "mongoose": "*",
-    "bower": "*"
+    "mongoose": "*"
   },
   "engines": {
     "node": "0.10.x"
