--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "bower install"
   },
   "dependencies": {
     "express": "3.x",
