--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "postinstall": "bower install"
+    "postinstall": "node_modules/.bin/bower install"
   },
   "dependencies": {
     "express": "3.x",
     "express3-handlebars": "*",
     "mongodb": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "bower": "*"
   },
   "engines": {
     "node": "0.10.x"
