--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.2"
+    "jquery": "~1.11.0",
+    "bootstrap": "~3.3.2",
+    "ionic": "driftyco/ionic-bower#v1.0.0-beta.13"
   }
 }
