--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "jquery": "~1.11.0",
     "bootstrap": "~3.3.2",
+    "ionicons": "*",
     "ionic": "driftyco/ionic-bower#v1.0.0-beta.13"
   }
 }
