set up mongodb/models/seed data

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "express3-handlebars": "*",
     "mongodb": "*",
     "mongoose": "*",
-    "bower": "*"
+    "bower": "*",
+    "mongodb": "*",
+    "mongoose": "*"
   },
   "engines": {
     "node": "0.10.x"
