--- a/tasks.json
+++ b/tasks.json
@@ -1,15 +1,15 @@
 [{
-    "name": "A06 - Meat on the Bones",
+    "name": "Lab 7 - Databases",
     "class_name": "COGS120",
-    "description": "Functionality functionality functionality!",
-    "due_date": "02/13/2015",
+    "description": "Connecting client to server without reloading!",
+    "due_date": "02/19/2015",
     "is_shared": true,
     "is_endorsed": false
   }, {
-    "name": "Lab 6 - AJAX",
+    "name": "A07 - Ready for testing",
     "class_name": "COGS120",
     "description": "Connecting client to server without reloading!",
-    "due_date": "02/12/2015",
+    "due_date": "02/20/2015",
     "is_shared": true,
     "is_endorsed": false
   }, {
