--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "jquery": "~1.11.0",
     "bootstrap": "~3.3.2",
     "ionicons": "*",
-    "ionic": "driftyco/ionic-bower#v1.0.0-beta.13"
+    "ionic": "driftyco/ionic-bower#v1.0.0-beta.13",
+    "intro.js": "*"
   }
 }
